--- a/tom/rhio/Localisation/Field/FieldPF/values.conf
+++ b/tom/rhio/Localisation/Field/FieldPF/values.conf
@@ -1,3 +1,11 @@
+[float] borderNoise.value = 50
+[float] borderNoise.comment = Maximal noise applied in 'x' on the position of the robot [cm]
+[float] borderNoiseTheta.value = 10
+[float] borderNoiseTheta.comment = Orientation noise applied at border reset in [-x,x] [deg]
+[float] fallNoise.value = 100
+[float] fallNoise.comment = Maximal noise applied when falling [cm]
+[float] fallNoiseTheta.value = 180
+[float] fallNoiseTheta.comment = When falling, uniform noise in [-x,x] is applied [deg]
 [float] tolDiffAngle.value = 15
 [float] tolDiffAngle.comment = 
 [float] tolDist.value = 100
