--- a/mowgly/rhio/Localisation/Field/GoalObservation/values.conf
+++ b/mowgly/rhio/Localisation/Field/GoalObservation/values.conf
@@ -1,6 +1,6 @@
-[float] maxAngleError.value = 20
+[float] maxAngleError.value = 10
 [float] maxAngleError.comment = The maximum angle difference between expectation and observation
-[float] maxTiltAllowed.value = 45
+[float] maxTiltAllowed.value = 80
 [float] maxTiltAllowed.comment = If tilt is above this value
 [float] pError.value = 0.2
 [float] pError.comment = The false positive probability
@@ -8,3 +8,5 @@
 [float] sigmoidLambda.comment = Cf. sigmoidOffset
 [float] sigmoidOffset.value = 0.6
 [float] sigmoidOffset.comment = The value at which dScore/dx is lambda, with dx = dAngle/maxAngle
+[float] similarAngleLimit.value = 5
+[float] similarAngleLimit.comment = Maximal angular difference for similar observations [deg]
