--- a/tom/rhio/moves/walk/values.conf
+++ b/tom/rhio/moves/walk/values.conf
@@ -10,16 +10,28 @@
 [float] armsRoll.comment = 
 [float] compensateRoll.value = -3.6
 [float] compensateRoll.comment = 
-[float] footYOffset.value = 0.025
+[float] cooldown.value = 0.6
+[float] cooldown.comment = Cooldown duration
+[float] footYOffset.value = 0.035
 [float] footYOffset.comment = Front Y offset
 [float] freq.value = 1.7
 [float] freq.comment = Walk frequency
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 20
-[float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 20
-[float] maxRotationAcceleration.comment = Maximum rotation acceleration
+[float] maxDLatByCycle.value = 10
+[float] maxDLatByCycle.comment = For noSmoothing mode [mm]
+[float] maxDStepByCycle.value = 20
+[float] maxDStepByCycle.comment = For noSmoothing mode [mm]
+[float] maxDTurnByCycle.value = 5
+[float] maxDTurnByCycle.comment = For noSmoothing mode [deg]
+[float] maxLateral.value = 30
+[float] maxLateral.comment = 
+[float] maxRotation.value = 20
+[float] maxRotation.comment = 
+[float] maxStep.value = 35
+[float] maxStep.comment = 
+[float] maxStepBackward.value = 20
+[float] maxStepBackward.comment = 
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
 [float] riseGain.value = 0.035
@@ -32,16 +44,8 @@
 [float] securityTreshold.comment = 
 [float] shootAfterPhase.value = 0.25
 [float] shootAfterPhase.comment = Shooting step
-[float] shootFreq.value = 0.9
-[float] shootFreq.comment = Shooting step
-[float] shootGain.value = 1
-[float] shootGain.comment = Shooting gain
 [float] shootPhase.value = 0
 [float] shootPhase.comment = Shooting step
-[float] shootSpeed.value = 4
-[float] shootSpeed.comment = 
-[float] shootStep.value = 0
-[float] shootStep.comment = Shooting step
 [float] smoothCommands.value = 0.9
 [float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
@@ -82,3 +86,5 @@
 [float] trunkZOffset.comment = Trunk Z offset
 [float] turnTrim.value = 0
 [float] turnTrim.comment = 
+[float] warmup.value = 0.6
+[float] warmup.comment = Warmup
