--- a/chewbacca/rhio/Localisation/Consistency/values.conf
+++ b/chewbacca/rhio/Localisation/Consistency/values.conf
@@ -1,11 +1,11 @@
 [int] windowSize.value = 50
 [int] windowSize.comment = Maximum number of observations inside the consistency checker
+[float] convergenceDelay.value = 20
+[float] convergenceDelay.comment = The maximal time that a robot can spend with a low consistency [s]
 [float] enabled.value = 0
-[float] enabled.comment = Is consistency check enabled?
+[float] enabled.comment = Is consistency check enabled? (If disable, consistencyScore is not updated)
 [float] minGoalQ.value = 0.8
 [float] minGoalQ.comment = Min goal quality to consider that filter has converged (for consistency)
-[float] resetInterval.value = 10
-[float] resetInterval.comment = Minimal time since any reset to allow a consistency based reset [s]
 [float] threshold.value = 0.5
 [float] threshold.comment = Minimal consistency quality
 [float] windowTime.value = 15
