--- a/chewbacca/rhio/moves/head/values.conf
+++ b/chewbacca/rhio/moves/head/values.conf
@@ -1,22 +1,34 @@
-[int] framesPerPos.value = 1
-[int] framesPerPos.comment = Frames per position
-[int] scanPanNbPos.value = 8
-[int] scanPanNbPos.comment = Number of different positions for scan in Pan
-[int] scanTiltNbPos.value = 3
-[int] scanTiltNbPos.comment = Number of different positions for scan in Tilt
-[float] goalTilt.value = 0
-[float] goalTilt.comment = Offset for scanning the goal
+[float] fallBackwardPitch.value = 80
+[float] fallBackwardPitch.comment = Head pitch goal value during backward falls [deg]
+[float] fallForwardPitch.value = -45
+[float] fallForwardPitch.comment = Head pitch goal value during forward falls [deg]
+[float] forceTrackDist.value = 0.75
+[float] forceTrackDist.comment = Distance to force watching the ball
+[float] localizeMaxPan.value = 135
+[float] localizeMaxPan.comment = Maximum pan wished for an image point
+[float] localizeMaxTilt.value = 60
+[float] localizeMaxTilt.comment = Maximum tilt wished for an image point
+[float] localizeMinOverlap.value = 5
+[float] localizeMinOverlap.comment = Minimal overlap between control points [degrees]
+[float] localizeMinTilt.value = -8
+[float] localizeMinTilt.comment = Minimum tilt wished for an image point
+[float] maxAcc.value = 3600
+[float] maxAcc.comment = Maximal acceleration [deg/s^2]
 [float] maxPan.value = 90
-[float] maxPan.comment = Maximum pan of image center
-[float] maxTilt.value = 70
-[float] maxTilt.comment = Maximum tilt of image center
-[float] minTilt.value = 10
-[float] minTilt.comment = Minimum tilt of image center
-[float] movingCool.value = 0.06
-[float] movingCool.comment = Moving cool delay
-[float] scanPanRange.value = 120
-[float] scanPanRange.comment = Scan pan range, looking in [-range/2, range/2]
-[float] scanTiltOffset.value = 35
-[float] scanTiltOffset.comment = Offset for tilt scanning
-[float] scanTiltRange.value = 40
-[float] scanTiltRange.comment = Scan tilt range looking in [offset-range/2, offset+range/2]
+[float] maxPan.comment = Maximum pan wished for an image point
+[float] maxPanTrack.value = 135
+[float] maxPanTrack.comment = Maximum pan wished for an image point when tracking
+[float] maxSpeed.value = 180
+[float] maxSpeed.comment = Maximal angular speed [deg/s]
+[float] maxTilt.value = 90
+[float] maxTilt.comment = Maximum tilt wished for an image point
+[float] minOverlap.value = 15
+[float] minOverlap.comment = Minimal overlap between control points [degrees]
+[float] minTilt.value = -5
+[float] minTilt.comment = Minimum tilt wished for an image point
+[float] scanExtraPeriod.value = 0.5
+[float] scanExtraPeriod.comment = Extra time to ensure we are looking everywhere [s]
+[float] smoothing.value = 0.9
+[float] smoothing.comment = smoothing of the orders applied for both scan and track
+[float] trackingPeriod.value = 1.5
+[float] trackingPeriod.comment = Duration of scan cycle [s]
